# Aboba

./: README.md  auxiliary_modules.py  custom_json.py  main.py  pyproject.toml  requirements.txt
data/: config.json  texts.json
packager files/: .replit
